# alext-geoposition-system

./: README.md  docker-build-mosquito.sh  docker-build-pro.sh  docker-compose-mosquito.yml  docker-compose.yml  docker-delete-pro.sh  docker-end-mosquito.sh  docker-end-pro.sh  docker-exec-pro.sh  docker-pause-mosquito.sh  docker-pause-pro.sh  docker-pro.env  docker-prune-pro.sh  docker-start-mosquito.sh  docker-start-pro.sh
geoposition-system/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.arm32  build.sh  clean_cmake.sh  deploy_rp4.sh  deploy_rp5.sh  start-geonumerics.sh  start-sitep.sh
geoposition-system/src/: geonumerics.cpp  geonumerics.h  sitep.cpp  sitep.h
mosquitto/: Dockerfile  start-mosquitto.sh
mosquitto/config/: mosquitto.dev.conf
